<resources>
    <string name="app_name">Zenspire</string>
    <string name="title_activity_clinic_maps">ClinicMapsActivity</string>
    <string name="questionnaire_result_sample">Wah, kamu mengalami gejala depresi ringan. Kamu dianjurkan untuk melakukan terapi psikoedukasi bila ada perburukan gejala</string>
    <string name="term_data_usage">Data kecemasan yang Anda masukkan dalam fitur jurnal serta resume chatbot terakhir Anda akan dapat diakses oleh psikolog.</string>
    <string name="term_data_security">Kami sangat menghargai privasi dan kerahasiaan data Anda. Psikolog yang mengakses data kecemasan dan resme chatbot Anda terikat oleh kode etik profesional untuk menjaga kerahasiaan semua informasi yang Anda berikan. Data kecemasan dan resume chatbot Anda hanya akan digunakan untuk tujuan konsultasi dan pengembangan rencana terapi yang sesuai.</string>
    <string name="term_data_usage_agreement">Dengan melanjutkan penggunaan fitur pencatatan kecemasan pada aplikasi ini, Anda memberikan persetujuan bahwa data Anda, termasuk resume chatbot, dapat diakses oleh psikolog Anda untuk tujuan konsultasi. Jika Anda memiliki pertanyaan atau kekhawatiran tentang penggunaan data kecemasan dan resume chatbot Anda, silakan hubungi tim dukungan kami atau diskusikan dengan psikolog Anda.</string>
    <string name="term_user_rights">
        Sebagai pengguna, Anda berhak untuk:
        \n- Mengetahui bagaimana data Anda akan digunakan.
        \n- Meminta penjelasan lebih lanjut tentang analisis data kecemasan dan resume chatbot terakhir Anda.
        \n- Menghapus entri kecemasan dalam jurnal dan hasil chat dengan chatbot kapan saja jika Anda merasa tidak nyaman dengan penyimpanannya.
    </string>
    <string name="terms_agreement">Dengan menggunakan aplikasi ini, Anda menyatakan telah membaca, memahami, dan menyetujui ketentuan di atas. Terima kasih telah mempercayakan Zenspire dalam pengelolaan kesehatan mental Anda.</string>
    <string name="terms_check">Saya telah membaca dan menyetujui ketentuan penggunaan data pada aplikasi ini</string>
    <string name="angst_scale_1">Minimal</string>
    <string name="angst_scale_2">Ringan</string>
    <string name="angst_scale_3">Sedang</string>
    <string name="angst_scale_4">Berat</string>
    <string name="angst_scale_5">Ekstrem</string>
    <string name="scale_desc_1">Sedikit kekhawatiran/kecemasan. Mampu menyelesaikan satu hal dan fokus pada tugas. Sedikit atau tanpa gejala fisik</string>
    <string name="scale_desc_2">Cemas tapi tidak seharian. Beberapa perubahan konsentrasi &amp; mungkin tidur. Sakit perut &amp; ketegangan otot</string>
    <string name="scale_desc_3">Cemas hampir sepanjang hari. Perubahan konsentrasi, nafsu makan, dan tidur. Menghindari. Merasa panik. Sakit kepala &amp; kelelahan</string>
    <string name="scale_desc_4">Cemas sepanjang hari. Merasa sesak napas, dada sesak, masalah pencernaan. Tidak dapat fokus. Kelebihan sensorik dan isolasi.</string>
    <string name="scale_desc_5">Kecemasan yang parah sepanjang hari. Serangan panik. Tidak bisa berfungsi. Gejala fisik yang intens. Merasa beku. Kehancuran. Pikiran obsesif.</string>
    <string name="journal_q1">Apa pikiran negatif yang kamu miliki dan bagaimana kamu menyangkalnya?</string>
    <string name="journal_q2">Apa yang kamu rasakan hari ini dan mengapa?</string>
    <string name="journal_q3">Tuliskan apapun yang ada di pikiranmu!</string>
    <string name="journal_q4">Apa yang kamu harapkan untuk dilakukan besok?</string>
    <string name="rafael">Rafael Rafael Rafael Rafael Rafael Rafael Rafael Rafael</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse imperdiet velit sed imperdiet aliquam. Vivamus eu mi quis lectus tincidunt hendrerit. Nullam lacinia posuere ante, id porttitor nulla vulputate ut. Pellentesque magna elit, scelerisque at ex vitae, pulvinar feugiat libero. Nam semper aliquet turpis quis aliquam. Mauris dignissim accumsan luctus. Donec in lorem arcu. Nullam et metus in nulla malesuada ultricies varius sit amet eros. Donec id sodales nunc. Vivamus at volutpat nisl, id sodales ex.</string>
</resources>