<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/Widget.Material3.CardView.Elevated"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/white"
    app:layout_constraintTop_toBottomOf="@+id/txt_name">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="12dp"
        android:paddingHorizontal="16dp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txt_mood"
            style="@style/font_paragraph_semibold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Bagaimana kecemasanmu hari ini?"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_mood_excellent"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:layout_marginTop="4dp"
            android:drawableTop="@drawable/ic_mood_sangat_baik"
            android:paddingHorizontal="0dp"
            android:textColor="@color/primary_blue_600"
            android:textStyle="bold"
            android:text="@string/angst_scale_1"
            app:cornerRadius="12dp"
            app:strokeColor="@color/primary_blue_600"
            app:layout_constraintEnd_toStartOf="@+id/btn_mood_good"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_mood" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_mood_good"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:layout_marginTop="4dp"
            android:drawableTop="@drawable/ic_mood_baik"
            android:paddingHorizontal="0dp"
            android:textColor="@color/primary_green_1"
            android:textStyle="bold"
            android:text="@string/angst_scale_2"
            app:cornerRadius="12dp"
            app:strokeColor="@color/primary_green_1"
            app:layout_constraintEnd_toStartOf="@+id/btn_mood_normal"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_mood_excellent"
            app:layout_constraintTop_toBottomOf="@+id/txt_mood" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_mood_normal"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:layout_marginTop="4dp"
            android:drawableTop="@drawable/ic_mood_biasa"
            android:paddingHorizontal="0dp"
            android:textColor="@color/secondary_green_700"
            android:textStyle="bold"
            android:text="@string/angst_scale_3"
            app:cornerRadius="12dp"
            app:strokeColor="@color/secondary_green_700"
            app:layout_constraintEnd_toStartOf="@+id/btn_mood_bad"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_mood_good"
            app:layout_constraintTop_toBottomOf="@+id/txt_mood" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_mood_bad"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:layout_marginTop="4dp"
            android:drawableTop="@drawable/ic_mood_buruk"
            android:paddingHorizontal="0dp"
            android:textColor="@color/secondary_yellow_400"
            android:textStyle="bold"
            android:text="@string/angst_scale_4"
            app:cornerRadius="12dp"
            app:strokeColor="@color/secondary_yellow_400"
            app:layout_constraintEnd_toStartOf="@+id/btn_mood_worse"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_mood_normal"
            app:layout_constraintTop_toBottomOf="@+id/txt_mood" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_mood_worse"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:drawableTop="@drawable/ic_mood_sangat_buruk"
            android:paddingHorizontal="0dp"
            android:textColor="@color/secondary_red_400"
            android:textStyle="bold"
            android:text="@string/angst_scale_5"
            app:cornerRadius="12dp"
            app:strokeColor="@color/secondary_red_400"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_mood_bad"
            app:layout_constraintTop_toBottomOf="@+id/txt_mood" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>